--- a/ss6_tong_quan_js/bai_tap/tinh_trung_binh_3_so.html
+++ b/ss6_tong_quan_js/bai_tap/tinh_trung_binh_3_so.html
@@ -7,19 +7,19 @@
 <body>
 <h1>Tính điểm trung bình 3 môn Toán, Lý, Hóa</h1>
 <div style="display: inline-block">
-    <label for="toan" style="display: inline-block; width: 120px">Điểm Toán</label><br>
-    <input type="number" id="toan" placeholder="Nhập điểm Toán" style="padding: 8px; margin-bottom: 16px">
+    <label for="toan" style="display: inline-block; width: 120px; margin-bottom: 4px">Điểm Toán</label><br>
+    <input type="number" id="toan" placeholder="Nhập điểm Toán" style="padding: 8px; margin-bottom: 16px; margin-right: 12px">
 </div>
 <div style="display: inline-block">
-    <label for="ly" style="display: inline-block; width: 120px">Điểm Lý</label><br>
-    <input type="number" id="ly" placeholder="Nhập điểm Lý" style="padding: 8px; margin-bottom: 16px">
+    <label for="ly" style="display: inline-block; width: 120px; margin-bottom: 4px">Điểm Lý</label><br>
+    <input type="number" id="ly" placeholder="Nhập điểm Lý" style="padding: 8px; margin-bottom: 16px; margin-right: 12px">
 </div>
 <div style="display: inline-block">
-    <label for="hoa" style="display: inline-block; width: 120px">Điểm Hóa</label><br>
+    <label for="hoa" style="display: inline-block; width: 120px; margin-bottom: 4px">Điểm Hóa</label><br>
     <input type="number" id="hoa" placeholder="Nhập điểm Hóa" style="padding: 8px; margin-bottom: 16px">
 </div>
 <br>
-<button onclick="TinhTB()" style="background-color: dodgerblue; color: white;padding: 12px; display: inline-block; margin-right: 12px">Tính điểm TB 3 môn</button>
+<button onclick="TinhTB()" style="background-color: dodgerblue; color: white;padding: 12px; display: inline-block; margin-right: 12px"><strong>Tính điểm TB 3 môn</button>
     <p id="label" style="display: inline-block"><strong></p> <p id="tb" style="display: inline-block; color: red"></p>
 <script>
     function TinhTB() {
