--- a/ss6_tong_quan_js/bai_tap/tinh_trung_binh_3_so.html
+++ b/ss6_tong_quan_js/bai_tap/tinh_trung_binh_3_so.html
@@ -19,7 +19,7 @@
     <input type="number" id="hoa" placeholder="Nhập điểm Hóa" style="padding: 8px; margin-bottom: 16px">
 </div>
 <br>
-<button onclick="TinhTB()" style="background-color: dodgerblue; color: white;padding: 12px; display: inline-block; margin-right: 12px"><strong>Tính điểm TB 3 môn</button>
+<button onclick="TinhTB()" style="background-color: dodgerblue; color: white;padding: 12px; display: inline-block; margin-right: 12px; font-family: Arial, sans-serif"><strong>Tính điểm TB 3 môn</button>
     <p id="label" style="display: inline-block"><strong></p> <p id="tb" style="display: inline-block; color: red"></p>
 <script>
     function TinhTB() {
