--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/ung_dung_may_tinh.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/ung_dung_may_tinh.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cal</title>
+    <title>Calculator</title>
 </head>
 <body>
 <div style="width: 700px; background-color: papayawhip; padding: 24px">
-    <h2>Caculator</h2>
+    <h2>Calculator</h2>
     <input type="number" id="so1" placeholder="Nhập số thứ nhất"
            style="display: inline-block; padding: 8px; margin-bottom: 16px; margin-right: 8px; width: 120px">
     <input type="number" id="so2" placeholder="Nhập số thứ hai"
