--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieu_du_lieu_toan_tu.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap/bien_kieu_du_lieu_toan_tu.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bai1</title>
+    <title>Biến, kiểu dữ liệu & toán tử</title>
 </head>
 <body>
-<div style="width: 700px; background-color: lightgoldenrodyellow; padding: 24px">
+<div style="width: 700px; background-color: lightgoldenrodyellow; padding: 24px; margin-bottom: 16px">
     <h2 style="margin-bottom: 32px">Tính điểm trung bình và tổng</h2>
     <div style="display: inline-block">
         <label for="toan" style="display: inline-block; width: 120px; margin-bottom: 4px">Điểm Toán</label><br>
@@ -31,7 +31,7 @@
     <strong id="label2" style="display: inline-block"></strong> <strong id="tong"
                                                                         style="display: inline-block; color: red"></strong>
 </div>
-<div style="width: 700px; background-color: aliceblue; padding: 24px">
+<div style="width: 700px; background-color: aliceblue; padding: 24px; margin-bottom: 16px">
     <h2>Chuyển độ C sang độ F</h2>
     <input type="number" id="c" style="display: inline-block; padding: 8px; margin-bottom: 16px; margin-right: 8px; width: 80px">
     <p style="display: inline-block">độ C</p>
@@ -41,7 +41,7 @@
     <strong id="f" style="display: inline-block; color: red"></strong>
     <p style="display: inline-block">độ F</p>
 </div>
-<div style="width: 700px; background-color: papayawhip; padding: 24px">
+<div style="width: 700px; background-color: papayawhip; padding: 24px; margin-bottom: 16px">
     <h2>Tính chu vi và diện tích hình tròn</h2>
     <label for="r" style="display: inline-block; width: 120px; margin-bottom: 4px">Nhập bán kính</label><br>
     <input type="number" id="r" placeholder="Nhập bán kính" style="display: inline-block; padding: 8px; margin-bottom: 16px; margin-right: 8px; width: 120px">
