--- a/ss8_cau_lenh_dieu_kien/bai_tap/luyen_tap_cau_lenh_dieu_kien_1/7_tinh_tien_dien.html
+++ b/ss8_cau_lenh_dieu_kien/bai_tap/luyen_tap_cau_lenh_dieu_kien_1/7_tinh_tien_dien.html
@@ -30,15 +30,15 @@
                 if (number > 50) {
                     money += 100000;
                     number -= 50;
-                    document.getElementById("kq").innerHTML ="Tiền điện: " + (225000 + number*3000);
+                    document.getElementById("kq").innerHTML ="Tiền điện: " + (225000 + number*3000) + " VND";
                 } else {
-                    document.getElementById("kq").innerHTML ="Tiền điện: " + (125000 + number*2000);
+                    document.getElementById("kq").innerHTML ="Tiền điện: " + (125000 + number*2000) + " VND";
                 }
             } else {
-                document.getElementById("kq").innerHTML ="Tiền điện: " + (50000 + number*1500);
+                document.getElementById("kq").innerHTML ="Tiền điện: " + (50000 + number*1500) + " VND";
             }
         } else {
-            document.getElementById("kq").innerHTML ="Tiền điện: " + number*1000;
+            document.getElementById("kq").innerHTML ="Tiền điện: " + number*1000 + " VND";
         }
     }
 </script>
