--- a/ss9_cau_truc_dieu_kien_2/luyen_tap_2/bai_06.html
+++ b/ss9_cau_truc_dieu_kien_2/luyen_tap_2/bai_06.html
@@ -26,7 +26,7 @@
         let b = parseFloat(document.getElementById("b").value);
         (a === 0) ?
             document.getElementById("kq").innerHTML = "số a phải # 0" :
-            document.getElementById("kq").innerHTML = "x = " + (0 - b) / a;
+            document.getElementById("kq").innerHTML = "x = " + (-b / a);
     }
 </script>
 </body>
