--- a/ss10_loop/bai_tap/sinh_bang_cuu_chuong.html
+++ b/ss10_loop/bai_tap/sinh_bang_cuu_chuong.html
@@ -9,12 +9,13 @@
 <table id="table" border="1">
 </table>
 <script>
-    let table = "<tr>";
+    let table = "";
     for (let i = 1; i <= 9; i++) {
+        table += "<tr>"
         for (let j = 2; j <= 9; j++) {
             table += "<td style='padding: 8px'>" + j + "x" + i + "=" + j * i + "</td>";
         }
-        table += "</tr><tr>";
+        table += "</tr>";
     }
     document.getElementById("table").innerHTML = table;
 </script>
