--- a/ss10_loop/bai_tap/hien_thi_20_so_nguyen_to_dau_tien.html
+++ b/ss10_loop/bai_tap/hien_thi_20_so_nguyen_to_dau_tien.html
@@ -11,8 +11,7 @@
     let number = 2;
     let total = 0;
     let string = "";
-    while  (total < 20)
-    {
+    while  (total < 20) {
         let count = 0;
         for (let i = 2; i < number; i++) {
             if (number % i == 0) {
