--- a/ss10_loop/bai_tap/bai_1.html
+++ b/ss10_loop/bai_tap/bai_1.html
@@ -8,10 +8,9 @@
 <script>
     for (let i = 1; i <= 100; i++) {
         if (i == 99) {
-            console.log("Đã hoàn thành");
-        } else {
-            console.log(i);
-        }
+            alert("Đã hoàn thành: " + i);
+        } 
+        console.log(i);
     }
 </script>
 </body>
