--- a/ss12_array/bai_tap/bai_10.html
+++ b/ss12_array/bai_tap/bai_10.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h3>Từ điển Anh - Việt</h3>
+<label for="eng">apple, banana, tree, dog, cat</label><br>
 <input id="eng" placeholder="Nhập từ tiếng Anh">
 <button onclick="trans()">Dịch</button>
 <h4 id="result"></h4>
