--- a/ss16_oop_1/bai_tap/class_rectangle.html
+++ b/ss16_oop_1/bai_tap/class_rectangle.html
@@ -44,6 +44,8 @@
 
     let rectangle1 = new Rectangle(200, 100);
     let canvas = document.getElementById("rectangle");
+    canvas.width = rectangle1.getWidth();
+    canvas.height = rectangle1.getHeight();
     let ctx = canvas.getContext("2d");
     ctx.fillStyle = "dodgerblue";
     ctx.fillRect(0, 0, rectangle1.getWidth(), rectangle1.getHeight());
