--- a/ss17_oop_2/bai_tap/cong_tac_bong_den.html
+++ b/ss17_oop_2/bai_tap/cong_tac_bong_den.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .lamp {
+            width: 200px;
+            height: 200px;
+            background-color: gray;
+            border-radius: 100px;
+            align-items: center;
+            justify-content: center;
+            display: inline-flex;
+            margin-right: 24px;
+        }
+    </style>
 </head>
 <body>
-<div id="lamp" style="width: 200px; height: 200px; background-color: gray; text-align: center">Bóng đèn</div>
+<div class="lamp" id="lamp">Bóng đèn</div>
 <button onclick="turnLight(lamp1, switch1)">Công tắc</button>
 <script>
     class Lamp {
