--- a/ss17_oop_2/bai_tap/quan_ly_san_pham.html
+++ b/ss17_oop_2/bai_tap/quan_ly_san_pham.html
@@ -95,6 +95,7 @@
             document.getElementById("id").value = '';
             document.getElementById("name").value = '';
             document.getElementById("price").value = '';
+            document.getElementById("save").innerHTML = '';
         } else {
             alert("Không được để trống trường thông tin!");
         }
