--- a/ss17_oop_2/bai_tap/quan_ly_san_pham.html
+++ b/ss17_oop_2/bai_tap/quan_ly_san_pham.html
@@ -34,6 +34,14 @@
             color: white;
         }
 
+        .edit:hover {
+            background-color: orange;
+        }
+
+        .edit:active {
+            background-color: saddlebrown;
+        }
+
         .del {
             margin-right: 4px;
             background-color: red;
@@ -41,6 +49,14 @@
             border: none;
             padding: 4px 8px;
             color: white;
+        }
+
+        .del:hover {
+            background-color: orangered;
+        }
+
+        .del:active {
+            background-color: darkred;
         }
 
         input {
@@ -63,13 +79,29 @@
             display: inline-block;
         }
 
+        .add:hover {
+            background-color: blue;
+        }
+
+        .add:active {
+            background-color: darkblue;
+        }
+
         .save {
             margin-right: 4px;
-            background-color: blue;
+            background-color: blueviolet;
             border-radius: 4px;
             border: none;
             padding: 8px 12px;
             color: white;
+        }
+
+        .save:hover {
+            background-color: violet;
+        }
+
+        .save:active {
+            background-color: darkviolet;
         }
 
         .stt {
