--- a/ss17_oop_2/bai_tap/cong_tac_bong_den.html
+++ b/ss17_oop_2/bai_tap/cong_tac_bong_den.html
@@ -14,6 +14,23 @@
             display: inline-flex;
             margin-right: 24px;
         }
+
+        button {
+            margin-right: 4px;
+            background-color: dodgerblue;
+            border-radius: 4px;
+            border: none;
+            padding: 8px 12px;
+            color: white;
+        }
+
+        button:hover {
+            background-color: blue;
+        }
+
+        button:active {
+            background-color: darkblue;
+        }
     </style>
 </head>
 <body>
