--- a/ss17_oop_2/bai_tap/quan_ly_san_pham.html
+++ b/ss17_oop_2/bai_tap/quan_ly_san_pham.html
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-<h3>Quản lý nhân viên</h3>
+<h3>Quản lý sản phẩm</h3>
 <input id="id" placeholder="Nhập mã sản phẩm">
 <input id="name" placeholder="Nhập tên sản phẩm">
 <input id="price" placeholder="Nhập giá sản phẩm">
