--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -24,16 +24,14 @@
     }
     console.log(arr);
     let space = arr[1] - arr[0];
-    let check = true;
+    let check = 'OK';
     for (let i = 2; i < arr.length; i++) {
         if (arr[i] - arr[i - 1] != space) {
-            check = false;
+            check = 'NO';
             break;
         }
     }
-    (check == true) ?
-        console.log('OK') :
-        console.log('NO');
+    console.log(check);
 </script>
 </body>
 </html>
