--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -23,15 +23,21 @@
         arr[i] = checkChild;
     }
     console.log(arr);
-    let space = arr[1] - arr[0];
-    let check = 'OK';
-    for (let i = 2; i < arr.length; i++) {
-        if (arr[i] - arr[i - 1] != space) {
-            check = 'NO';
-            break;
+
+    function checkArr(arr) {
+        let space = arr[1] - arr[0];
+        if (space <= 0) {
+            return 'NO';
         }
+        for (let i = 2; i < arr.length; i++) {
+            if (arr[i] - arr[i - 1] != space) {
+                return 'NO';
+            }
+        }
+        return "OK";
     }
-    console.log(check);
+
+    console.log(checkArr(arr));
 </script>
 </body>
 </html>
