--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -6,23 +6,19 @@
 </head>
 <body>
 <script>
-    let arrLength = prompt('Nhập độ dài mảng (<=20)');
-    let num = parseFloat(arrLength);
-    while (isNaN(num) || num < 2 || num > 20 || arrLength == '' || num % 1 != 0) {
-        arrLength = prompt("Không hợp lệ, vui lòng nhập lại");
-        num = parseFloat(arrLength);
+    let num = prompt('Nhập độ dài mảng (<=20)');
+    while (num < 2 || num > 20 || num % 1 != 0) {
+        num = prompt("Không hợp lệ, vui lòng nhập lại");
     }
     let arr = [];
     for (let i = 0; i < num; i++) {
         let child = prompt('Nhập phần tử thứ ' + (i + 1));
-        let checkChild = parseFloat(child);
-        while (isNaN(checkChild) || child == '') {
+        while (isNaN(child) || child == '') {
             child = prompt("Không hợp lệ, vui lòng nhập lại phần tử thứ " + (i + 1));
-            checkChild = parseFloat(child);
         }
-        arr[i] = checkChild;
+        arr[i] = child;
     }
-    console.log(arr);
+    console.log('Mảng vừa nhập là: ' + arr);
 
     function checkArr(arr) {
         let space = arr[1] - arr[0];
