--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let num = prompt('Nhập độ dài mảng (<=20)');
-    while (num < 2 || num > 20 || num % 1 != 0) {
+    while (num < 1 || num > 20 || num % 1 != 0) {
         num = prompt("Không hợp lệ, vui lòng nhập lại");
     }
     let arr = [];
@@ -22,7 +22,7 @@
 
     function checkArr(arr) {
         let space = arr[1] - arr[0];
-        if (space <= 0) {
+        if (space <= 0 || arr.length < 2) {
             return 'NO';
         }
         for (let i = 2; i < arr.length; i++) {
