--- a/case_study/bai_5.html
+++ b/case_study/bai_5.html
@@ -5,6 +5,29 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    function findMaxNumber(n) {
+        if (isNaN(n) || n.length != 4) {
+            return -1;
+        }
+        let array = n.split('');
+        if (array[0] < array[1]) {
+            return array[1] + array[2] + array[3];
+        } else {
+            if (array[1] < array[2]) {
+                return array[0] + array[2] + array[3];
+            } else {
+                if (array[2] < array[3]) {
+                    return array[0] + array[1] + array[3];
+                } else {
+                    return array[0] + array[1] + array[1];
+                }
+            }
+        }
+    }
 
+    let n = prompt('nhập số bất kỳ');
+    console.log(findMaxNumber(n));
+</script>
 </body>
 </html>
