--- a/case_study/bai_5.html
+++ b/case_study/bai_5.html
@@ -10,20 +10,15 @@
         if (isNaN(n) || n.length != 4 || parseFloat(n) % 1 != 0) {
             return -1;
         }
-        let array = n.split('');
-        if (array[0] < array[1]) {
-            return array[1] + array[2] + array[3];
-        } else {
-            if (array[1] < array[2]) {
-                return array[0] + array[2] + array[3];
-            } else {
-                if (array[2] < array[3]) {
-                    return array[0] + array[1] + array[3];
-                } else {
-                    return array[0] + array[1] + array[1];
-                }
+        let max = 0;
+        for (let i = 0; i < n.length; i++) {
+            let newString = n.slice(0, i) + n.slice(i + 1);
+            let num = parseInt(newString);
+            if (max < num) {
+                max = num;
             }
         }
+        return max;
     }
 
     let n = prompt('nhập số bất kỳ');
