--- a/case_study/bai_6.html
+++ b/case_study/bai_6.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    function checkArray(array) {
+    function evenOrOdd(array) {
         let num = array[0] % 2;
         for (let i = 1; i < array.length; i++) {
             if (array[i] % 2 != num) {
@@ -20,9 +20,9 @@
         }
     }
 
-    console.log(checkArray([1, 2, 3, 4]));
-    console.log(checkArray([2, 4, 6, 8]));
-    console.log(checkArray([1, 3, 5, 7]));
+    console.log(evenOrOdd([1, 2, 3, 4]));
+    console.log(evenOrOdd([2, 4, 6, 8]));
+    console.log(evenOrOdd([1, 3, 5, 7]));
 </script>
 </body>
 </html>
