--- a/case_study/bai_8.html
+++ b/case_study/bai_8.html
@@ -11,13 +11,9 @@
             if (array[i] < 2) {
                 return false;
             }
-            let count = 0;
-            for (let j = 1; j <= array[i]; j++) {
+            for (let j = 2; j <= Math.sqrt(array[i]); j++) {
                 if (array[i] % j == 0) {
-                    count++;
-                    if (count > 2) {
-                        return false;
-                    }
+                    return false;
                 }
             }
         }
@@ -25,7 +21,7 @@
     }
 
     console.log(isPrime([11, 3, 3, 13]));
-    console.log(isPrime([2, 3, 3, 7]));
+    console.log(isPrime([2, 4, 3, 7]));
 </script>
 </body>
 </html>
