--- a/case_study/bai_9.html
+++ b/case_study/bai_9.html
@@ -21,7 +21,7 @@
     }
     let array = [];
     for (let i = 1; i <= num; i++) {
-        array.push(+prompt('Nhập phần tử thứ ' + i));
+        array.push(+prompt('Nhập số thứ ' + i));
     }
     console.log(checkArray(array));
 </script>
