--- a/case_study/bai_9.html
+++ b/case_study/bai_9.html
@@ -23,6 +23,7 @@
     for (let i = 1; i <= num; i++) {
         array.push(+prompt('Nhập số thứ ' + i));
     }
+    console.log('Mảng vừa nhập là: ' + array);
     console.log(checkArray(array));
 </script>
 </body>
