--- a/case_study/bai_10.html
+++ b/case_study/bai_10.html
@@ -7,14 +7,13 @@
 <body>
 <script>
     function checkString(str) {
+        str = str.toLowerCase();
         let vowel = ['a', 'e', 'i', 'o', 'u', 'y'];
         let result = [];
-        for (let i = 0; i < str.length; i++) {
-            let char = str[i].toLowerCase();
+        for (let char of str) {
             if (vowel.includes(char)) {
                 result.push(char);
-                let index = vowel.indexOf(char);
-                vowel.splice(index, 1);
+                vowel.splice(vowel.indexOf(char), 1);
                 if (vowel.length == 0) {
                     return result;
                 }
