--- a/case_study/bai_12.html
+++ b/case_study/bai_12.html
@@ -102,15 +102,15 @@
         let check = false;
         while (check == false) {
             let array = ngaySinh.split('/');
-            if (array.length != 3 || isNaN(array[0]) || isNaN(array[1]) || isNaN(array[2]) || array[0].length > 2 || array[1].length > 2 || array[2].length != 4 || parseFloat(array[0]) < 1 || parseFloat(array[1]) < 1 || parseFloat(array[1]) > 12 || parseFloat(array[2]) < 1) {
+            if (array.length != 3 || isNaN(array[0]) || isNaN(array[1]) || isNaN(array[2]) || array[0].length != 2 || array[1].length != 2 || array[2].length != 4 || parseFloat(array[0]) < 1 || parseFloat(array[1]) < 1 || parseFloat(array[1]) > 12 || parseFloat(array[2]) < 1) {
                 ngaySinh = prompt('Vui lòng nhập lại ngày sinh theo định dạng dd/mm/yyyy');
             } else {
                 switch (array[1]) {
-                    case '1':
-                    case '3':
-                    case '5':
-                    case '7':
-                    case '8':
+                    case '01':
+                    case '03':
+                    case '05':
+                    case '07':
+                    case '08':
                     case '10':
                     case '12':
                         if (parseFloat(array[0]) > 31) {
@@ -119,9 +119,9 @@
                             check = true;
                         }
                         break;
-                    case '4':
-                    case '6':
-                    case '9':
+                    case '04':
+                    case '06':
+                    case '09':
                     case '11':
                         if (parseFloat(array[0]) > 30) {
                             ngaySinh = prompt('Vui lòng nhập lại ngày sinh theo định dạng dd/mm/yyyy');
@@ -129,7 +129,7 @@
                             check = true;
                         }
                         break;
-                    case '2':
+                    case '02':
                         if (parseFloat(array[0]) > 28) {
                             ngaySinh = prompt('Vui lòng nhập lại ngày sinh theo định dạng dd/mm/yyyy');
                         } else {
