--- a/case_study/bai_12.html
+++ b/case_study/bai_12.html
@@ -168,7 +168,7 @@
     }
 
     function del() {
-        let maDel = prompt('Nhập mã học sinh cần sửa thông tin');
+        let maDel = prompt('Nhập mã học sinh cần xóa');
         for (let i = 0; i < students.length; i++) {
             if (students[i].ma == maDel) {
                 let check = confirm('Bạn chắc chắn muốn xóa học sinh có mã: ' + maDel);
